--- a/index.html
+++ b/index.html
@@ -187,10 +187,10 @@
             <!--Cloudstack Links-->
             <h2>Cloudstack Links</h2>
             <section>
-                <a target="_bLank" href=""></a><br>
-                <a target="_bLank" href=""></a><br>
-                <a target="_bLank" href=""></a><br>
-                <a target="_bLank" href=""></a><br>
+                <a target="_bLank" href="https://adventuremediacstack.github.io/Winch-Fairleads---What-They-Are-and-Why-You-Need-One/">https://adventuremediacstack.github.io/Winch-Fairleads---What-They-Are-and-Why-You-Need-One/</a><br>
+                <a target="_bLank" href="https://adventuremediaco.s3.us-east-005.backblazeb2.com/Winch+Fairleads+-+What+They+Are+and+Why+You+Need+One/index.html">https://adventuremediaco.s3.us-east-005.backblazeb2.com/Winch+Fairleads+-+What+They+Are+and+Why+You+Need+One/index.html</a><br>
+                <a target="_bLank" href="https://winch-fairleads-what-git-f05c03-adventuremediacstacks-projects.vercel.app/">https://winch-fairleads-what-git-f05c03-adventuremediacstacks-projects.vercel.app/</a><br>
+                <a target="_bLank" href="https://melodious-elf-1b6954.netlify.app/">https://melodious-elf-1b6954.netlify.app/</a><br>
             </section>
         <!---Sidebar-->
         <div class="side-bar">
